--- a/index.html
+++ b/index.html
@@ -5,24 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/css.css">  
-    <title>Universidad</title>
+    <title>Universidade</title>
 </head>
 <body>
     
 <ul>
-        <img  class='img-menu' src="assets/img/Screenshot_2019-10-30 Free logo 1.png" alt="">
-
+    <img  class='img-menu' src="assets/img/Screenshot_2019-10-30 Free logo 1.png" alt="">
     <li><a href="#news">News</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
   
   <div class="contenido">
-    <h1>Fixed Top Navigation Bar</h1>
-    <h2>Scroll this page to see the effect</h2>
-    <h2>The navigation bar will stay at the top of the page while scrolling</h2>
-  
-    <img src="assets/img/Screenshot_2019-10-30 Free logo 1.png" alt="">
-   
+      <h1>analize blalbalabl</h1>
+      <p>blababalablaalbalabllbablablbalblablablablbababblablablblablablablblablablablblablablablbabablabablablba
+        lanalnlananannlanlanlanlnlanlanlanlnlanla
+      </p>
+    <div class="box" id="box-1">
+
+    </div>
+    <div class="box" id="box-2">
+
+    </div>
+    <div class="box" id="box-3">
+
+    </div>
+    
   </div>
+<footer>
+  blabablabalbl
+</footer>
 </body>
 </html>
