--- a/index.html
+++ b/index.html
@@ -16,20 +16,56 @@
   </ul>
   
   <div class="contenido">
-      <h1>analize blalbalabl</h1>
-      <p>blababalablaalbalabllbablablbalblablablablbababblablablblablablablblablablablblablablablbabablabablablba
-        lanalnlananannlanlanlanlnlanlanlanlnlanla
-      </p>
-    <div class="box" id="box-1">
+      <h1>Análise e Desenvolvimento de Sistemas
+        </h1>
 
-    </div>
-    <div class="box" id="box-2">
+    <section class="section-box1"> 
+          <div class="box1" id="box-1"><img class="img-box1" src="assets/img/analise-de-sistemas.webp" alt=""></div>
+          <div class="box1" id="box-2">      
+            <p class="p-box1">
+                Atualmente as empresas de todos os portes, bem como as indústrias, passam por um grande processo de informatização.
+                Com a inclusão dos computadores nas companhias de todos os setores, a maioria das atividades podem ser realizadas
+                 através de máquinas que utilizem um sistema eletrônico. Por isso, é sempre importante manter uma regularidade na 
+                 manutenção e prevenção de problemas que podem vir a acontecer com esses sistemas. Todos esses acontecimentos 
+                 proporcionam um cenário positivo para o profissional analista de sistemas.
+                O curso de Análise de Sistemas é uma graduação de nível superior com titulação tecnológica. A formação capacita
+                o profissional para atuar com a análise, projeto e atualização de sistemas de informação. 
+            </p>
+          </div>
+    </section>
 
-    </div>
-    <div class="box" id="box-3">
+    <section class="section-box2"> 
+        <div class="box1" id="box-1"><img class="img-box1" src="assets/img/analise-de-sistemas.webp" alt=""></div>
+        <div class="box1" id="box-2">      
+          <p class="p-box1">
+              Atualmente as empresas de todos os portes, bem como as indústrias, passam por um grande processo de informatização.
+              Com a inclusão dos computadores nas companhias de todos os setores, a maioria das atividades podem ser realizadas
+               através de máquinas que utilizem um sistema eletrônico. Por isso, é sempre importante manter uma regularidade na 
+               manutenção e prevenção de problemas que podem vir a acontecer com esses sistemas. Todos esses acontecimentos 
+               proporcionam um cenário positivo para o profissional analista de sistemas.
+              O curso de Análise de Sistemas é uma graduação de nível superior com titulação tecnológica. A formação capacita
+              o profissional para atuar com a análise, projeto e atualização de sistemas de informação. 
+          </p>
+        </div>
+  </section>
 
-    </div>
-    
+   <section class="section-box"> 
+     <h2>O Campus</h2>
+        <div class="box" id="box-1">
+          <img class="img-box" src="assets/img/2016.07.14-Exposio-gua.jpg" alt="">
+          <button>Mais</button>
+        </div>
+        <div class="box" id="box-2">
+          <img  class="img-box"  src="assets/img/2016.07.14-Exposio-gua.jpg" alt="">
+          <button>Mais</button>
+        </div>
+        <div class="box" id="box-3">
+          <img  class="img-box"  src="assets/img/2016.07.14-Exposio-gua.jpg" alt="">
+          <button>Mais</button>
+        </div>
+   </section>
+ 
+
   </div>
 <footer>
   blabablabalbl
