--- a/index.html
+++ b/index.html
@@ -5,27 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/css.css">  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Universidade</title>
 </head>
 <body>
     
 <ul>
     <img  class='img-menu' src="assets/img/Screenshot_2019-10-30 Free logo 1.png" alt="">
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#sobre">Sobre</a></li>
+    <li><a href="#mercado">Mercado</a></li>
+    <li><a href="#campus">Campus</a></li>
   </ul>
   
   <div class="contenido">
       <h1>Análise e Desenvolvimento de Sistemas
         </h1>
 
-    <section class="section-box1"> 
+    <section class="section-box1" id="sobre"> 
           <div class="box1" id="box-1"><img class="img-box1" src="assets/img/analise-de-sistemas.webp" alt=""></div>
-          <div class="box1" id="box-2">      
+          <div class="box1" id="box-2">     
+            <h2>Sobre o curso de Análise e Desenvolvimento de Sistemas</h2> 
             <p class="p-box1">
                 Atualmente as empresas de todos os portes, bem como as indústrias, passam por um grande processo de informatização.
                 Com a inclusão dos computadores nas companhias de todos os setores, a maioria das atividades podem ser realizadas
-                 através de máquinas que utilizem um sistema eletrônico. Por isso, é sempre importante manter uma regularidade na 
+                 através de máquinas que utilizem um sistema eletrônico.
+                </p>
+
+                 <p class="p-box1">
+
+                  Por isso, é sempre importante manter uma regularidade na 
                  manutenção e prevenção de problemas que podem vir a acontecer com esses sistemas. Todos esses acontecimentos 
                  proporcionam um cenário positivo para o profissional analista de sistemas.
                 O curso de Análise de Sistemas é uma graduação de nível superior com titulação tecnológica. A formação capacita
@@ -34,41 +42,57 @@
           </div>
     </section>
 
-    <section class="section-box2"> 
-        <div class="box1" id="box-1"><img class="img-box1" src="assets/img/analise-de-sistemas.webp" alt=""></div>
-        <div class="box1" id="box-2">      
-          <p class="p-box1">
-              Atualmente as empresas de todos os portes, bem como as indústrias, passam por um grande processo de informatização.
-              Com a inclusão dos computadores nas companhias de todos os setores, a maioria das atividades podem ser realizadas
-               através de máquinas que utilizem um sistema eletrônico. Por isso, é sempre importante manter uma regularidade na 
-               manutenção e prevenção de problemas que podem vir a acontecer com esses sistemas. Todos esses acontecimentos 
-               proporcionam um cenário positivo para o profissional analista de sistemas.
-              O curso de Análise de Sistemas é uma graduação de nível superior com titulação tecnológica. A formação capacita
-              o profissional para atuar com a análise, projeto e atualização de sistemas de informação. 
-          </p>
+    <section class="section-box2" id="mercado"> 
+        <div class="box1" id="box-1"><img class="img-box1" src="assets/img/Captura de tela 2018-05-05 16.42.02.png" alt=""></div>
+        <div class="box1" id="box-2">
+            <h3>Mercado de trabalho</h3>      
+            <p class="p-box1">
+                Oferece oportunidade para a criação de empresas de base tecnológica, para a geração de riquezas e transformação da sociedade. 
+            </p>
+            <h3>Perfil Profissional</h3>      
+            <p class="p-box1">
+                Egresso com perfil moderno, inovador, digital, disruptivo e de sucesso. Capacitado para a criação de empresas dinâmicas.</p>
+            <h3>Como podemos ajudá-lo?</h3>      
+            <p class="p-box1">
+                Dispomos de laboratórios especificamente criados para que você tenha acesso ao que existe de mais recente em tecnologias de computação.
+                 Nosso curso é voltado para as novas necessidades do mercado e com o suporte de especialistas, mestres e doutores, que atuam com destaque no mercado de trabalho, para direcionar sua carreira.
+              </p>
         </div>
   </section>
 
-   <section class="section-box"> 
+   <section class="section-box" id="campus"> 
      <h2>O Campus</h2>
         <div class="box" id="box-1">
-          <img class="img-box" src="assets/img/2016.07.14-Exposio-gua.jpg" alt="">
-          <button>Mais</button>
+          <img class="img-box" src="assets/img/auditorio.jpg" alt="">
+          <button><a href="auditorios.html">Auditirio</a></button>
         </div>
         <div class="box" id="box-2">
-          <img  class="img-box"  src="assets/img/2016.07.14-Exposio-gua.jpg" alt="">
-          <button>Mais</button>
+          <img  class="img-box"  src="assets/img/salas.jpg" alt="">
+          <button><a href="salas.html">Salas</a></button>
         </div>
         <div class="box" id="box-3">
-          <img  class="img-box"  src="assets/img/2016.07.14-Exposio-gua.jpg" alt="">
-          <button>Mais</button>
+          <img  class="img-box"  src="assets/img/labs.jpg" alt="">
+          <button><a href="laboratorios.html">Laboratorios</a></button>
         </div>
    </section>
  
 
   </div>
 <footer>
-  blabablabalbl
+      <div class="div-p">
+        <p class="pFooter">Siga-nos nas redes sociais
+            </p>
+      </div>
+      <div class="redes">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-google"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          <a href="#" class="fa fa-youtube"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-skype"></a>
+          
+      </div>
 </footer>
 </body>
 </html>
